# envow

./: .goreleaser.yml  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: release.yml
Formula/: envolve.rb  envow.rb
src/: generate.rs  main.rs  schema.rs  validate.rs
