[package]
name = "envow"
version = "0.2.0"
edition = "2021"
description = "Env schema validator and .env.example generator"
license = "MIT"
repository = "https://github.com/mb4ndeira/envow"
keywords = ["env", "environment", "validation", "dotenv", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "envow"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
colored = "2"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
